WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49687
Web Inspector: WebKit2: crash in WebKit::WebInspectorClient::sendMessageToFrontend
https://bugs.webkit.org/show_bug.cgi?id=49687
Summary
Web Inspector: WebKit2: crash in WebKit::WebInspectorClient::sendMessageToFro...
Timothy Hatcher
Reported
2010-11-17 14:20:44 PST
4 com.apple.WebKit2: WebKit::WebInspector::inspectorPage const + 12 <== 4 com.apple.WebKit2: WebKit::WebInspectorClient::sendMessageToFrontend + 40 4 com.apple.WebCore: WebCore::InspectorFrontend::frameDetachedFromParent + 713 4 com.apple.WebCore: WebCore::InspectorResourceAgent::frameDetachedFromParent + 47 4 com.apple.WebCore: WebCore::InspectorController::frameDetachedFromParent + 137 4 com.apple.WebCore: WebCore::FrameLoader::detachFromParent + 195 4 com.apple.WebKit2: WebKit::WebPage::close + 326 Steps to reproduce: 0) Use WK2 1) Open a page 2) Try to show the Web Inspector (currently nothing shows) 3) Close the page to see the crash
Attachments
Proposed Change
(2.14 KB, patch)
2010-11-17 14:28 PST
,
Timothy Hatcher
sullivan
: review+
timothy
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2010-11-17 14:20:59 PST
<
rdar://problem/8672603
>
Timothy Hatcher
Comment 2
2010-11-17 14:28:30 PST
Created
attachment 74157
[details]
Proposed Change
Timothy Hatcher
Comment 3
2010-11-17 14:47:00 PST
Landed in
r72246
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug