Fix a crash when closing the inspected page when the Web Inspector page was never created.

https://bugs.webkit.org/show_bug.cgi?id=49687

Reviewed by John Sullivan.

* WebProcess/WebCoreSupport/WebInspectorClient.cpp:
(WebKit::WebInspectorClient::sendMessageToFrontend): Null check the Inspector WebPage.

Canonical link: https://commits.webkit.org/62708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72246 268f45cc-cd09-0410-ab3c-d52691b4dbfc